--- a/dev/views/main/subscribe.html
+++ b/dev/views/main/subscribe.html
@@ -31,7 +31,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="INGRESA TU CORREO">
 		      <span class="input-group-btn">
-		        <button class="btn btn-primary" type="button">PARTICIPAR</button>
+		        <button class="btn btn-primary" type="button" ng-click="subscribe()">PARTICIPAR</button>
 		      </span>
             </div>
         </div>
